# Minesweeper-SDL

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-deploy.yml
src/: assetloader.cpp  assetloader.h  clickable.cpp  clickable.h  game.cpp  game.h  listable.cpp  listable.h  log.h  main.cpp  renderable.cpp  renderable.h  tile.cpp  tile.h  utils.cpp  utils.h
